--- a/IoSilownia/IoSilownia.csproj
+++ b/IoSilownia/IoSilownia.csproj
@@ -25,4 +25,16 @@
     </Resource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Images\Home2.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="MainWindow.xaml">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+  </ItemGroup>
+
 </Project>
